Java8インストールまでのレシピを追加。

--- a/scripts/setup_pacemaker/chef-repo/site-cookbooks/custom-apache2/templates/default/httpd.conf.erb
+++ b/scripts/setup_pacemaker/chef-repo/site-cookbooks/custom-apache2/templates/default/httpd.conf.erb
@@ -65,7 +65,7 @@ LoadModule cgi_module modules/mod_cgi.so
 #LoadModule version_module modules/mod_version.so
 User apache
 Group apache
-ServerName ncms.mng.nintendo.net
+ServerName pm01
 UseCanonicalName Off
 
 <Directory />
