設定ファイルの雛形に「テーブル構造はチェックしないがとりあえず起動させる」 という旨の設定を追加。

--- a/scripts/setup_pacemaker/chef-repo/site-cookbooks/custom-mysql/templates/default/my.cnf.erb
+++ b/scripts/setup_pacemaker/chef-repo/site-cookbooks/custom-mysql/templates/default/my.cnf.erb
@@ -4,6 +4,9 @@ datadir=/data/mysql
 socket=/data/mysql/mysql.sock
 user=mysql
 
+# 一時的な設定。このレシピがすべて通過し終わったら消えている。 
+skip-grant-tables 
+
 # Disabling symbolic-links is recommended to prevent assorted security risks
 symbolic-links=0
 character-set-server=utf8
@@ -39,4 +42,4 @@ pid-file=/var/run/mysqld/mysqld.pid
 default-character-set=utf8
 
 [client]
-socket=/data/mysql/mysql.sockas
+socket=/data/mysql/mysql.sock
